cluster/apps/tunarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunarr
  labels:
    app.kubernetes.io/name: tunarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tunarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tunarr
    spec:
      containers:
        - name: tunarr
          image: chrisbenincasa/tunarr:latest
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          volumeMounts:
            - name: config
              mountPath: /config/tunarr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tunarr-config
