cluster/apps/tunarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tunarr
  namespace: media
  annotations:
    gethomepage.dev/description: Live TV channel manager
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Management
    gethomepage.dev/icon: sh-tunarr
    gethomepage.dev/name: Tunarr
    gethomepage.dev/pod-selector: app.kubernetes.io/name=tunarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - tunarr.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: tunarr
          port: 8000
          weight: 1
